# pyconju

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  setup.cfg
docs/: contributing.rst
docs/_build/doctrees/: features.doctree  index.doctree
docs/_build/html/: index.html  objects.inv  searchindex.js  usage.html
docs/_build/html/_sources/: app.rst.txt
docs/source/: conf.py  contributing.rst  index.rst  usage.rst
docs/source/_build/doctrees/: app.doctree  contributing.doctree  environment.pickle  usage.doctree
docs/source/_build/html/: .buildinfo  app.html  contributing.html  features.html  genindex.html  search.html
docs/source/_build/html/_sources/: features.rst.txt  usage.rst.txt
src/: __init__.py
src/pyconju/: csv.py  xls.py  xlsx.py
test/: file1.xls  file2.csv  merged_3662.csv  merged_3867.xls  test_example.py  test_example2.py
