[metadata]
name = pyconju
version = 0.1.0
author = Agee Aondo
author_email = ageeaondo45@gmail.com
description = Python package for merging multiple files 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dyagee/pyconju
download_url  = https://github.com/dyagee/pyconju
keywords = python3, excel, xls, csv, xlsx, merge
project_urls =
    Bugs = https://github.com/dyagee/pyconju/issues
    Docs = https://github.com/dyagee/pyconju/README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Data Scientists
    Intended Audience :: Developers
    Intended Audience :: ML

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    pandas
    openpyxl
    aiofiles
    python-multipart
    xlrd>=2.0.1
    typing

[options.packages.find]
where = src