[metadata]
name = pyconju
version = 0.1.1
author = Agee Aondo
author_email = ageeaondo45@gmail.com
description = Python package for merging multiple files 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dyagee/pyconju
download_url  = https://github.com/dyagee/pyconju/archive/refs/tags/v0.1.1.tar.gz
keywords = python3, excel, xls, csv, xlsx, merge
project_urls =
    Bugs = https://github.com/dyagee/pyconju/issues
    Docs = https://github.com/dyagee/pyconju/README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Other Audience

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    pandas
    openpyxl
    xlrd
    

[options.packages.find]
where = src